--- a/frontend/src/components/templates/Logo.css
+++ b/frontend/src/components/templates/Logo.css
@@ -10,3 +10,9 @@ aside.logo img{
     width: 100%;
     /* max-width: 200px; */
 }
+
+@media (max-width: 576px) {
+    aside.logo img{
+        width: 350px;
+    }
+}
