--- a/frontend/src/components/templates/Header.css
+++ b/frontend/src/components/templates/Header.css
@@ -9,3 +9,9 @@ header.header {
 header.header h1{
     font-size: 1.8em;
 }
+
+@media(max-width: 576px) {
+    header.header {
+        display: none;
+    }
+}
