--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -3,6 +3,7 @@
 
     --logo-height: 100px;
     --header-height: 100px;
+    --menu-top-height: 80px;
     --aside-width: 225px;
     --footer-height: 40px;
 
@@ -39,7 +40,7 @@ aside.logo{
 header.header{
     grid-area: header;
 }
-aside.menu{
+aside.menu-area{
     grid-area: menu;
 }
 main.content{
@@ -47,4 +48,37 @@ main.content{
 }
 
 footer.footer{
-    grid-area: footer;}
+    grid-area: footer;
+}
+
+@media(max-width: 768px) {
+    .app {
+        grid-template-rows:
+            var(--header-height)
+            var(--menu-top-height)
+            1fr
+            var(--footer-height);
+        grid-template-columns: var(--aside-width) 1fr;
+        grid-template-areas:
+            "logo header"
+            "menu menu"
+            "content content"
+            "footer footer";
+    }
+}
+
+@media(max-width: 576px) {
+    .app {
+        grid-template-rows:
+            var(--logo-height)
+            var(--menu-top-height)
+            1fr
+            var(--footer-height);
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "logo"
+            "menu"
+            "content"
+            "footer";
+    }
+}
